# Learn-from-AI

./: .gitignore  CODE_WIKI.md  README.md
backend/: README.md  learnai.db  pyproject.toml
backend/app/: __init__.py  config.py  db.py  main.py
backend/app/api/: __init__.py  learning_goals.py  reviews.py  roadmaps.py  router.py  sessions.py
backend/app/models/: base.py  learning_goal.py  review.py  roadmap.py  session.py
backend/app/providers/: base.py  mock_provider.py
backend/app/repositories/: learning_goal_repository.py  review_repository.py  roadmap_repository.py  session_repository.py
backend/app/schemas/: learning_goal.py  review.py  roadmap.py  session.py
backend/app/services/: learning_goal_service.py  review_service.py  roadmap_service.py  session_service.py
backend/tests/: conftest.py  test_health.py  test_learning_goals.py  test_reviews.py  test_roadmaps.py  test_sessions.py
docs/: 01-product-requirements-document.md  02-technical-architecture.md  03-development-standards.md  04-test-plan.md  05-project-plan.md  06-operation-plan.md  07-database-design.md  08-api-documentation.md  09-deployment-guide.md  10-local-storage-sync.md  README.md  frontend-design-prompt-concise.md  frontend-design-prompt.md  guided-learning-coach-usage.md
docs/superpowers/plans/: 2026-04-03-flutter-frontend-shell-and-core-screens.md  2026-04-05-benchmark-inspired-frontend-optimization.md  (+2 more)
flutter_app/: pubspec.yaml
flutter_app/lib/: main.dart
flutter_app/test/: widget_test.dart
skills/guided-learning-coach/: SKILL.md
tests/: test_guided_learning_skill.py
(+95 files in other folders)
