[project]
name = "learnai-backend"
version = "0.1.0"
description = "Local-first backend for LearnAI"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110.0",
    "uvicorn>=0.30.0",
    "sqlalchemy>=2.0.0",
    "sqlmodel>=0.0.22",
    "pydantic-settings>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "httpx>=0.27.0",
    "pytest>=8.0.0",
]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"
